--- a/index.html
+++ b/index.html
@@ -184,12 +184,9 @@
 
 
                 <div class="row learnMorePad">
-                    <a class="centerJ" style="text-decoration: none;" href="./pages/ContactUs.html">
-                        <button class="btn btn-primary sansCollectionJ viewMenuBtnJ">Learn More <img class="disappearJ"
-                                src="./assets/learnMoreArr.png" style="padding-left: 2px; padding-bottom: 8px;" alt="">
-                            <img src="./assets/learnMoreArr.png" class="mobileArrowsJ"
-                                style="padding-bottom: 5px; margin-left: 15px;" alt=""></button>
-                    </a>
+                    <a class="centerJ" href="./pages/ContactUs.html" style="text-decoration: none;"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">Learn More <img src="./assets/learnMoreArr.png" class="disappearJ" style="padding-bottom: 10px; padding-left: 4px;"
+                            alt=""><img src="./assets/learnMoreArr.png" class="mobileArrowsJ"
+                            style="padding-bottom: 5px; margin-left: 15px;" alt=""></button></a>
                 </div>
 
 
@@ -209,7 +206,7 @@
         </div>
     </div>
 
-    <div class="container-fluid menuPaddingJ">
+    <div class="container-fluid menuPaddingJ" id="menu">
         <div class="row homePageMargin">
             <div class="col">
                 <h2 class="whiteJ abrilFatfaceJ cuisineJ disappearJ">Vietnamese Cuisine</h2>
@@ -225,7 +222,7 @@
 
             </div>
             <div class="col-8 disappearJ">
-                <p id="menu" class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches
+                <p  class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches
                     that are apart of the Vietnamese
                     cuisine. Don’t be afraid to order yourself a sandwich and give it a try, because I guarantee that
                     you won’t regret it!. Down below are our top 5 popular sandwiches.</p>
@@ -351,11 +348,11 @@
                 <div class="carousel-item" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
-                                alt="Picture of Grilled PorkBanh Mi">
+                            <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top"
+                                alt="Picture of Vegetarian Banh Mi">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                        class="sandwichJ">Grilled Pork</span> $5.79</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
+                                        class="sandwichJ">Vegetarian</span> $5.79</p>
                                 <div class="row starRowJ">
                                     <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                                     <img class="star2J" src="./assets/Star.png" alt="Picture of star">
@@ -370,11 +367,11 @@
                 <div class="carousel-item" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
-                                alt="Picture of Grilled PorkBanh Mi">
+                            <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top"
+                                alt="Picture of BBQ Pork Banh Mi">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                        class="sandwichJ">Grilled Pork</span> $5.79</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span class="sandwichJ">BBQ
+                                        Pork</span> $5.79</p>
                                 <div class="row starRowJ">
                                     <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                                     <img class="star2J" src="./assets/Star.png" alt="Picture of star">
@@ -431,7 +428,7 @@
                 </div>
             </div>
         </div>
-        <div class="row centerJ my-4" style="padding-top: 50px; padding-bottom: 90px;">
+        <div class="row centerJ viewSandwichPad">
             <button class="btn btn-primary sansCollectionJ viewSandwichesBtn disappearJ">View Sandwiches <img
                     src="./assets/viewSandwichesArr.png" alt=""
                     style="padding-left: 25px; padding-bottom: 2px;"></button>
@@ -539,6 +536,112 @@
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="carouselExampleSlidesOnly " class="carousel slide appearJ" data-bs-ride="carousel">
+            <div class="carousel-inner">
+
+                <div class="carousel-item active" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
+                                alt="Picture of Grilled PorkBanh Mi">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
+                                        class="sandwichJ">Grilled Pork</span> $5.79</p>
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top"
+                                alt="Picture of Vegetarian Banh Mi">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
+                                        class="sandwichJ">Vegetarian</span> $5.79</p>
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top"
+                                alt="Picture of BBQ Pork Banh Mi">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span class="sandwichJ">BBQ
+                                        Pork</span> $5.79</p>
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top"
+                                alt="Picture of Ham and Cheese Croissant">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
+                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Croissant
+                                </p>
+                                <p class="card-text sansCollectionJ sandwichJ2">$6.49</p>
+        
+        
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img class="img-fluid hover" src="./assets/banhMiCard5.png" class="card-img-top"
+                                alt="Picture of Ham and Cheese Baguette">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
+                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Baguette</p>
+                                <p class="card-text sansCollectionJ sandwichJ2">$6.19</p>
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
