--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ disappearJ" style="width: 1040px;">"A banh mi a day keeps the
         hunger away"
     </h1>
+    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ appearJ" style="width: 350px;">Best Sandwiches & Smoothies
+    </h1>
 
     <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu
             <img src="./assets/viewMenuArr.png" class="disappearJ" style="padding-bottom: 10px; padding-left: 4px;"
@@ -548,17 +550,16 @@
                 <div class="carousel-item active" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
-                                alt="Picture of Grilled PorkBanh Mi">
+                            <img src="./assets/drinkCard1.png" class="card-img-top imgHeightJ hover2" alt="...">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
-                                        class="sandwichJ">Grilled Pork</span> $5.79</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span
+                                        class="sandwichJ">Tangy Taro</span> $5.89</p>
                                 <div class="row starRowJ">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -567,17 +568,16 @@
                 <div class="carousel-item" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top"
-                                alt="Picture of Vegetarian Banh Mi">
+                            <img src="./assets/drinkCard2.png" class="card-img-top imgHeightJ hover2" alt="...">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
-                                        class="sandwichJ">Vegetarian</span> $5.79</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span
+                                        class="sandwichJ">Green Tea Gangbusters</span> $5.89</p>
                                 <div class="row starRowJ">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -586,17 +586,16 @@
                 <div class="carousel-item" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top"
-                                alt="Picture of BBQ Pork Banh Mi">
+                            <img src="./assets/drinkCard3.png" class="card-img-top imgHeightJ hover2" alt="...">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span class="sandwichJ">BBQ
-                                        Pork</span> $5.79</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span
+                                        class="sandwichJ">Iced Thai Tea</span> $5.69</p>
                                 <div class="row starRowJ">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -605,41 +604,37 @@
                 <div class="carousel-item" data-bs-interval="5000">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top"
-                                alt="Picture of Ham and Cheese Croissant">
+                            <img src="./assets/drinkCard4.png" class="card-img-top imgHeightJ hover2" alt="...">
                             <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
-                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Croissant
-                                </p>
-                                <p class="card-text sansCollectionJ sandwichJ2">$6.49</p>
+                                <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span
+                                        class="sandwichJ">Appealing Avocado</span> $5.89</p>
+                                <div class="row starRowJ">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="5000">
+                    <div class="row centerJ">
+                        <div class="card cardJ">
+                            <img src="./assets/drinkCard5.png" class="card-img-top imgHeightJ hover2" alt="...">
+                            <div class="card-body">
+                                <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#2 Recommended</p>
+                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">HoneyDew</p>
+                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">Milk Tea</p>
+                                <p class="card-text sansCollectionJ sandwichJ2">$5.69</p>
         
-        
                                 <div class="row starRowJ">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item" data-bs-interval="5000">
-                    <div class="row centerJ">
-                        <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard5.png" class="card-img-top"
-                                alt="Picture of Ham and Cheese Baguette">
-                            <div class="card-body">
-                                <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
-                                <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Baguette</p>
-                                <p class="card-text sansCollectionJ sandwichJ2">$6.19</p>
-                                <div class="row starRowJ">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
-                                    <img class="star2J" src="./assets/Star.png" alt="Picture of star">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
+                                    <img class="star2J" src="./assets/Star.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -647,13 +642,14 @@
                 </div>
             </div>
         </div>
-        <div class="row centerJ mt-1" style="padding-top: 40px; padding-bottom: 75px;">
+        <div class="row centerJ viewDrinksPad">
             <button class="btn btn-primary sansCollectionJ viewSandwichesBtn disappearJ">View Drinks<img
                     src="./assets/viewSandwichesArr.png" alt=""
                     style="padding-left: 30px; padding-bottom: 2px;"></button>
             <button class="btn btn-primary sansCollectionJ viewSandwichesBtn appearJ">View More<img
                     src="./assets/viewSandwichesArr.png" alt=""
                     style="padding-left: 30px; padding-bottom: 2px;"></button>
+        </div>
         </div>
         <div class="container-fluid reviewPaddingJ disappearJ">
             <div id="carouselExample" class="carousel slide bgWhiteJ">
