--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                                                     <div class="accordion-body blackBg mobileNavCoverJ"><a
                                                             class="nav-link navLinksJ yellowJ"
                                                             href="./pages/Menu.html">Food</a></div>
-                                                    <div class="accordion-body blackBg"><a
-                                                            class="nav-link navLinksJ yellowJ mobileNavCoverJ"
+                                                    <div class="accordion-body blackBg mobileNavCoverJ"><a
+                                                            class="nav-link navLinksJ yellowJ "
                                                             href="./pages/Drinks.html">Drinks</a></div>
                                                 </div>
                                             </div>
@@ -667,7 +667,7 @@
                         </div>
                         <div class="row">
                             <p class="txtCenterJ sansCollectionJ lineHeight30"
-                                style="padding-left: 350px; padding-right: 350px;">
+                                style="padding-left: 21vw; padding-right: 21vw;">
                                 The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
                                 compared to other restaurants but are packed with sooo much flavor. I usually go for the
                                 #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
