--- a/index.html
+++ b/index.html
@@ -692,11 +692,11 @@
                             <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item " style="padding-top: 70px; padding-bottom: 40px;">
                         <div class="row centerJ">
                             <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
                         </div>
-                        <div class="row centerJ">
+                        <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
@@ -704,7 +704,8 @@
                             <img class="starJ" src="./assets/Star.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">
+                            <p class="txtCenterJ sansCollectionJ lineHeight30"
+                                style="padding-left: 21vw; padding-right: 21vw;">
                                 The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
                                 compared to other restaurants but are packed with sooo much flavor. I usually go for the
                                 #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
@@ -718,22 +719,22 @@
                             <img class="quotesJ" src="./assets/Quotes.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Tina T</p>
+                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Tina T</p>
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Customer</p>
+                            <p class="txtCenterJ" style="font-size: 15px; opacity: 66%;">Customer</p>
                         </div>
                         <div class="row centerJ">
-                            <img class="dotsJ" src="./assets/DotOutline.png" alt="">
                             <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                            <img class="dotsJ" src="./assets/DotOutline.png" alt="">
                             <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" style="padding-top: 70px; padding-bottom: 40px;">
                         <div class="row centerJ">
                             <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
                         </div>
-                        <div class="row centerJ">
+                        <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
@@ -741,7 +742,8 @@
                             <img class="starJ" src="./assets/Star.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">
+                            <p class="txtCenterJ sansCollectionJ lineHeight30"
+                                style="padding-left: 21vw; padding-right: 21vw;">
                                 The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
                                 compared to other restaurants but are packed with sooo much flavor. I usually go for the
                                 #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
@@ -755,15 +757,15 @@
                             <img class="quotesJ" src="./assets/Quotes.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Tina T</p>
+                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Tina T</p>
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Customer</p>
+                            <p class="txtCenterJ" style="font-size: 15px; opacity: 66%;">Customer</p>
                         </div>
                         <div class="row centerJ">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
+                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
                             <img class="dotsJ" src="./assets/DotOutline.png" alt="">
-                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
-                            <img class="dotsJ" src="./assets/Dot No fill.png" alt="">
                         </div>
                     </div>
                 </div>
