--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <h3 class="infoTxtSizeJ">OPEN HOURS</h3>
                 </div>
                 <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
-                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 360px;">Mon - Tues: 9-5
+                    <h3 class="infoTxtSizeJ sansCollectionJ gray" style="width: 360px;">Mon - Tues: 9-5
                         Wednesday: CLOSED
                         Thu - Sun: 9-5
                     </h3>
@@ -146,7 +146,7 @@
                     <h3 class="infoTxtSizeJ">LOCATION</h3>
                 </div>
                 <div class="row txtCenterJ centerJ sansCollectionJ disappearJ" style="padding-top: 10px">
-                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 420px;">3330 E Hammer Ln Ste C Stockton, CA
+                    <h3 class="infoTxtSizeJ sansCollectionJ gray" style="width: 420px;">3330 E Hammer Ln Ste C Stockton, CA
                         95212</h3>
                 </div>
 
@@ -201,7 +201,7 @@
                     <h3 class="infoTxtSizeJ">CONTACT</h3>
                 </div>
                 <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
-                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 420px;">(209) 475-0652</h3>
+                    <h3 class="infoTxtSizeJ sansCollectionJ gray" style="width: 420px;">(209) 475-0652</h3>
                 </div>
 
             </div>
@@ -694,7 +694,7 @@
                     </div>
                     <div class="carousel-item " style="padding-top: 70px; padding-bottom: 40px;">
                         <div class="row centerJ">
-                            <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
+                            <img class="reviewImgJ" src="./assets/" alt="">
                         </div>
                         <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
